# test-ai

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  langgraph.json  mypy.ini  pyproject.toml
docs/: CHALLENGE.md  LANGSMITH_STUDIO_SETUP.md
scripts/: download_dataset.py
src/agentic_rag/: __init__.py  api.py  cli.py
src/agentic_rag/agent/: __init__.py  agent_controller.py  controller.py  graph.py  prompts.py  tools.py  types.py
src/agentic_rag/data/: __init__.py  chunking.py  cleaning.py  db.py  ingestion_pipeline.py  pipeline.py  schema.py  types.py
src/agentic_rag/evaluation/: __init__.py  metrics.py  runner.py
src/agentic_rag/logging_utils/: __init__.py  setup.py
src/agentic_rag/retrieval/: __init__.py  base.py  reranker.py  retriever.py  schemas.py
src/agentic_rag/schemas/: __init__.py  api.py
src/agentic_rag/settings/: __init__.py  schema.py
src/agentic_rag/utils/: __init__.py  imports.py  io.py
tests/: test_agent.py  test_api.py  test_chunking.py  test_cleaning.py  test_cleaning_improvements.py  test_dataset_download.py  test_db.py  test_ingest.py  test_ingestion_pipeline.py  test_openai_config.py  test_persist.py  test_reranker.py  test_retriever.py  test_schema.py  test_settings.py  test_tools.py
